--- a/driver-pulsar/deploy/templates/bookkeeper.conf
+++ b/driver-pulsar/deploy/templates/bookkeeper.conf
@@ -17,17 +17,18 @@
 # under the License.
 #
 
+journalSyncData=false
 
 zkServers={{ zookeeperServers }}
 
 advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
 
 # Use multiple journals to better exploit SSD throughput
-journalDirectories=/mnt/journal/1,/mnt/journal/2,/mnt/journal/3,/mnt/journal/4
+journalDirectories=/dev/shm/j1,/dev/shm/j2,/dev/shm/j3,/dev/shm/j4,/dev/shm/j5,/dev/shm/j6,/dev/shm/j7,/dev/shm/j8
 ledgerDirectories=/mnt/storage
 
-dbStorage_writeCacheMaxSizeMb=4096
-dbStorage_readAheadCacheMaxSizeMb=4096
+dbStorage_writeCacheMaxSizeMb=8192
+dbStorage_readAheadCacheMaxSizeMb=8192
 dbStorage_rocksDB_blockCacheSize=4294967296
 
 
@@ -145,7 +146,7 @@ journalMaxSizeMB=2048
 # Max number of old journal file to kept
 # Keep a number of old journal files would help data recovery in specia case
 #
-journalMaxBackups=5
+journalMaxBackups=0
 
 # How much space should we pre-allocate at a time in the journal
 journalPreAllocSizeMB=16
@@ -161,7 +162,7 @@ journalRemoveFromPageCache=true
 journalAdaptiveGroupWrites=true
 
 # Maximum latency to impose on a journal write to achieve grouping
-journalMaxGroupWaitMSec=1
+journalMaxGroupWaitMSec=0
 
 # All the journal writes and commits should be aligned to given size
 journalAlignmentSize=4096
@@ -173,7 +174,7 @@ journalBufferedWritesThreshold=524288
 journalFlushWhenQueueEmpty=false
 
 # The number of threads that should handle journal callbacks
-numJournalCallbackThreads=8
+numJournalCallbackThreads=0
 
 # The number of max entries to keep in fragment for re-replication
 rereplicationEntryBatchSize=5000
