--- a/driver-pulsar/deploy/templates/pulsar.service
+++ b/driver-pulsar/deploy/templates/pulsar.service
@@ -3,6 +3,7 @@ Description=Pulsar Broker
 After=network.target
 
 [Service]
+Environment=PULSAR_ROOT_LOGGER=INFO,ROLLINGFILE
 ExecStart=/opt/pulsar/bin/pulsar broker
 WorkingDirectory=/opt/pulsar
 RestartSec=1s
