Added option for no key partition routing

--- a/workloads/1-topic-1-partition-1kb.yaml
+++ b/workloads/1-topic-1-partition-1kb.yaml
@@ -21,7 +21,7 @@ name: 1 topic / 1 partition / 1Kb
 
 topics: 1
 partitionsPerTopic: 1
-keyDistributor: "ROUND_ROBIN"
+keyDistributor: "NO_KEY"
 messageSize: 1024
 payloadFile: "payload/payload-1Kb.data"
 subscriptionsPerTopic: 1
