Configure deployment for single HDD VM

--- a/driver-kafka/deploy/deploy.yaml
+++ b/driver-kafka/deploy/deploy.yaml
@@ -29,8 +29,7 @@
          fstype: xfs
          dev: '{{ item }}'
       with_items:
-        - '/dev/nvme0n1'
-        - '/dev/nvme1n1'
+        - '/dev/xvdb'
     - name: Mount disks
       mount:
         path: "{{ item.path }}"
@@ -39,8 +38,7 @@
         opts: defaults,noatime,nodiscard
         state: mounted
       with_items:
-        - { path: "/mnt/data-1", src: "/dev/nvme0n1" }
-        - { path: "/mnt/data-2", src: "/dev/nvme1n1" }
+        - { path: "/mnt/data", src: "/dev/xvdb" }
 
 - name: Kafka setup
   hosts: all
