--- a/driver-pulsar/deploy/templates/bookkeeper.conf
+++ b/driver-pulsar/deploy/templates/bookkeeper.conf
@@ -22,15 +22,14 @@ zkServers={{ zookeeperServers }}
 
 advertisedAddress={{ hostvars[inventory_hostname].private_ip }}
 
-# Use multiple journals to better exploit SSD throughput
-journalDirectories=/mnt/journal/1,/mnt/journal/2,/mnt/journal/3,/mnt/journal/4
+journalDirectories=/mnt/storage
 ledgerDirectories=/mnt/storage
 
 dbStorage_writeCacheMaxSizeMb=1024
 dbStorage_readAheadCacheMaxSizeMb=1024
 dbStorage_rocksDB_blockCacheSize=1073741824
 
-journalSyncData=true
+journalSyncData=false
 
 ## Regular Bookie settings
 
@@ -162,7 +161,7 @@ journalRemoveFromPageCache=true
 journalAdaptiveGroupWrites=true
 
 # Maximum latency to impose on a journal write to achieve grouping
-journalMaxGroupWaitMSec=1
+journalMaxGroupWaitMSec=0
 
 # All the journal writes and commits should be aligned to given size
 journalAlignmentSize=4096
@@ -171,7 +170,7 @@ journalAlignmentSize=4096
 journalBufferedWritesThreshold=524288
 
 # If we should flush the journal when journal queue is empty
-journalFlushWhenQueueEmpty=false
+journalFlushWhenQueueEmpty=true
 
 # The number of threads that should handle journal callbacks
 numJournalCallbackThreads=8
